Update lib