@@ -13,10 +13,20 @@ subprojects {
 
 	apply plugin: 'java-library'
 
-	version "1.3.6"
+	version "1.4.0"
 
 	sourceCompatibility = 14
 	targetCompatibility = 14
+
+	tasks.withType(JavaCompile) {
+		options.compilerArgs += "--enable-preview"
+	}
+	tasks.withType(Test) {
+		jvmArgs += "--enable-preview"
+	}
+	tasks.withType(JavaExec) {
+		jvmArgs += "--enable-preview"
+	}
 
 	java {
 		modularity.inferModulePath = true
